Fix text wrapping screwing up horizontal sizing in field drag buttons

--- a/src/css/orb.theme.less
+++ b/src/css/orb.theme.less
@@ -110,6 +110,9 @@
             .fltr-btn-active {
                 background-color: @filterbutton-color-bg-hover;
             }
+            span {
+                white-space: nowrap;
+            }
         }
 
         .drp-trgt {
